# logtura-cf-tail

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  config.rs  lib.rs  main.rs  tail.rs
tests/: live_cloudflare.rs
tests/fixtures/: dirtsignal-canceled-queue.json  dirtsignal-exceeded-memory.json  dirtsignal-queue-log.json  worker-exception.json
