[package]
name = "logtura-cf-tail"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Cloudflare Workers Tail API bridge for Vector exec sources."
license = "Apache-2.0"
repository = "https://github.com/logtura/logtura-cf-tail"
homepage = "https://github.com/logtura/logtura-cf-tail#readme"
authors = ["Erik Aronesty"]
readme = "README.md"
keywords = ["vector", "cloudflare", "workers", "tail", "logs"]
categories = ["command-line-utilities"]

[lib]
name = "logtura_cf_tail_lib"
path = "src/lib.rs"

[[bin]]
name = "logtura-cf-tail"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"
